# plot_test

./: .editorconfig  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  QUICK_FIX.md  README.md  README_EN.md  fix_chinese_font.py  fix_windows_font.py  font_setup_guide.md  install_ubuntu_fonts.sh  main.py  pyproject.toml  quick_font_test.py  setup.cfg  setup.py  test_chinese_simple.py  test_plot_simple.md  test_plot_usage.md  test_windows_font.py  ubuntu_font_guide.md
.github/workflows/: ci.yml
src/: __init__.py  data.py  plot.py
test/: __init__.py  example_usage.py  font_diagnosis.py  simple_font_test.py  test_colors.py  test_data_generation.py  test_font.py  test_grouped_stacked.py  test_plot.py  test_ubuntu_fonts.py
