[project]
name = "plot-test"
version = "0.1.0"
description = "A Python plotting test project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "pyarrow>=5.0.0",
    "seaborn>=0.11.0",
    "fonttools>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]