[project]
name = "plot-test"
version = "0.1.0"
description = "A Python plotting test project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "pyarrow>=5.0.0",
    "seaborn>=0.11.0",
    "fonttools>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "test*"]

[dependency-groups]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "E203"]  # 忽略行长度和换行相关错误

[tool.ruff.lint.per-file-ignores]
"src/plot.py" = ["E501", "E203", "E501"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120